src/plugins/kibi_query_viewer_vis/public/kibi_query_viewer_vis.less
@import (reference) "~ui/kibi/styles/kibi_variables.less";

.sindicetech-entity-info-vis {
  padding: 8px;
  margin: auto;
}
.sindicetech-entity-info-vis span.snippetLabel {
  font-size: 1.2em;
}
.sindicetech-entity-info-vis a.snippetShowHideButton {
  font-size: 1.2em;
  font-weight: bold;
}
.sindicetech-entity-info-vis .filterButton .filter {
  cursor: pointer;
}
.sindicetech-entity-info-vis .filterButton .showQuery {
  cursor: pointer;
}
.sindicetech-entity-info-vis-params ul {
  margin: 0;
  padding: 0;
}
.sindicetech-entity-info-vis-params ul li.queryOptionArea {
  margin-bottom: 2px;
  padding: 2px;
  position: relative;
}
.sindicetech-entity-info-vis-params ul li.queryOptionArea div.rightCorner {
  position: absolute;
  right: 0px;
  top: 0px;
}
.sindicetech-entity-info-vis-params ul li.queryOptionArea .header {
  background-color: #fff;
}
.sindicetech-entity-info-vis-params ul li.queryOptionArea .header h2 {
  font-size: 14px;
  margin: 2px 0;
  font-weight: bold;
  padding: 0;
}
.sindicetech-entity-info-vis-params ul li .content {
  background-color: #ecf0f1;
  padding: 0 4px;
}
.sindicetech-entity-info-vis-params ul li .content .form-group:first-child {
  margin-top:4px;
}
.sindicetech-entity-info-vis-params ul li.queryOptionArea .templateVariablesEditor {
  height: 50px;
}
.sindicetech-entity-info-vis-params ul li.queryOptionArea table {
  width: 100%;
}
.sindicetech-entity-info-vis-params ul li.queryOptionArea table td:first-child {
  width: 15%;
}
.sindicetech-entity-info-vis-params ul li.queryOptionArea table td:nth-child(2) {
  width: 35%;
}
.sindicetech-entity-info-vis-params .form-group textarea {
  height: 80px;
}


/* here lets override the borders so they are visible on grey background */
.sindicetech-entity-info-vis-params ul li .content .ace_editor {
  border: 2px @st-darkgray-blured solid;
}
.sindicetech-entity-info-vis-params ul li .content .ace_focus {
  border: 2px @st-darkgray-focused solid;
}

.sindicetech-entity-info-vis-params ul li .content input[type='text'] {
  border: 2px @st-darkgray-blured solid;
}
.sindicetech-entity-info-vis-params ul li .content input[type='text']:focus {
  border: 2px @st-darkgray-focused solid;
}
.sindicetech-entity-info-vis-params ul li .content select {
  border: 2px @st-darkgray-blured solid;
}
.sindicetech-entity-info-vis-params ul li .content select:focus {
  border: 2px @st-darkgray-focused solid;
}

/* Warnings */

.templateResult.results-not-ok-verbose {
  pre {
    background-color: inherit;
    border: none;
  }
  padding: 4px;
  background: #ffffca;
  border: 1px solid #dedede;
  margin-bottom: 8px;
  color: #656A76;
}

.templateResult.results-not-ok-less-verbose {
  padding: 4px;
}

a.normal-font-weight.ng-scope {
  font-weight: normal;
}

